cabal-version:       >=1.10

name:                scheme
version:             0.1.0.0
description: a scheme interpreter
author:              Mason Anderson
maintainer:          masonanderson0@gmail.com
build-type:          Simple

executable scheme
  main-is: Main.hs
  other-modules:
      Parser
    , LispVal
    , Eval
    , Prim
    , Repl
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >= 4.13
    , containers
    , text
    , mtl
    , parsec
    , directory
    , haskeline
  default-language: Haskell2010
